--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <title>Heartistic Being</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link type="text/css" rel="stylesheet" href="..\css\Home.css" />
+    <link type="text/css" rel="stylesheet" href="..\css\index.css" />
     <title>Product Landing Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,7 +29,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="/JS/script.js"></script>
+    <script src="/JS/index.js"></script>
   </head>
 
   <body id="pageContent">
