--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Heartistic Being</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link type="text/css" rel="stylesheet" href="..\css\index.css" />
+    <link type="text/css" rel="stylesheet" href="/CSS/index.css" />
     <title>Product Landing Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
