Update index.html => Added Notes Application link

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                   purposes, such as organizing daily tasks, planning a project,
                   or setting goals
                 </p>
-                <a href="return false" class="link"
+                <a href="https://js-projects-one-wheat.vercel.app/" class="link"
                   ><i class="fa-solid fa-arrow-up-right-from-square"></i
                 ></a>
               </div>
